	* receive buffer optimizations (memcpy savings and memory savings)
	* Support for specifying the TOS byte for peer traffic.
	* Basic support for queueing of torrents.
	* Better bias to give connections to downloading torrents
	  with fewer peers.
	* Optimized resource usage (removed the checking thread)
	* Support to bind outgoing connections to specific ports
	* Disk cache support.
	* New, more memory efficient, piece picker with sequential download
	  support (instead of the more complicated sequential download threshold).
	* Auto Upload slots. Automtically opens up more slots if
	  upload limit is not met.
	* Improved NAT-PMP support by querying the default gateway (no
	  linux support yet)
	* Improved UPnP support by ignoring routers not on the clients subnet.

release 0.13
	
	* Added scrape support
	* Added add_extension() to torrent_handle. Can instantiate
	  extensions for torrents while downloading
	* Added support for remove_torrent to delete the files as well
	* Fixed issue with failing async_accept on windows
	* DHT improvements, proper error messages are now returned when
	  nodes sends bad packets
	* Optimized the country table used to resolve country of peers
	* Copying optimization for sending data. Data is no longer copied from
	  the disk I/O buffer to the send buffer.
	* Buffer optimization to use a raw buffer instead of std::vector<char>
	* Improved file storage to use sparse files
	* Updated python bindings
	* Added more clients to the identifiable clients list.
	* Torrents can now be started in paused state (to better support queuing)
	* Improved IPv6 support (support for IPv6 extension to trackers and
	  listens on both IPv6 and IPv4 interfaces).
	* Improved asserts used. Generates a stacktrace on linux
	* Piece picker optimizations and improvements
	* Improved unchoker, connection limit and rate limiter
	* Support for FAST extension
	* Fixed invalid calculation in DHT node distance